fixed aspect ration on mobile in front page

--- a/scss/components/_post-preview.scss
+++ b/scss/components/_post-preview.scss
@@ -6,7 +6,7 @@
     align-items: stretch;
     &__imageContainer {
         width: 100%;
-        height: calc((100vw - 2rem) * .75);
+        height: auto;
         &>img {
             width: 100%;
             height: 100%;
